<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dontpad.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:text="DONTPAD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:text="@string/root_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textSize="20sp"
            android:id="@+id/path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:textColor="#fff"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/go_button"
        android:layout_gravity="center"
        android:text="@string/go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/tutorial_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/tutorial_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/tutorial_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/tutorial_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/tutorial_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/tutorial_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
